# shish

./: .envrc  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  flake.nix  justfile  pyproject.toml
.github/workflows/: publish.yml  test.yml
benchmarks/: bench_bufwriter.py
docs/: fd-ownership.md  process-interaction.md  streams.md
docs/design/: api-surface.md  async-buffered-writer-design.md  fd-ownership.md  redirects.md  write-performance.md
src/shish/: __init__.py  _bufwriter_py.py  _cbufwriter.c  _defaults.py  aio.py  builders.py  dsl.py  fd.py  fdops.py  fn_stage.py  ir.py  runtime.py  streams.py  syntax.py
src/shish/runtime/: __init__.py  api.py  spawn.py  spawn_cmd.py  tree.py
src/shish/streams/: __init__.py  readers.py  writers.py  writers_v1c.py
tests/: _list_fds.c  _list_fds.py  conftest.py  core.py  test_aio.py  test_builder.py  test_builders.py  test_dsl.py  test_e2e.py  test_fd_hygiene.py  test_fd_lifecycle.py  test_fdops.py  test_ir.py  test_runtime.py  test_stages.py  test_streams.py  test_syntax.py
tests/streams/: conftest.py  test_raw.py  test_readers.py  test_stages.py  test_writers.py
