[project]
name = "shish"
version = "0.0.1"
description = "Async shell command library with operator-based DSL"
authors = [
    { name = "Matthew Mazzanti", email = "matthew.mazzanti@gmail.com" }
]
requires-python = ">=3.13"
license = "MIT"
readme = "README.md"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "ANN"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
