[project]
name = "shish"
version = "0.0.0.dev0"
description = "Async shell command library with operator-based DSL"
authors = [
    { name = "Matthew Mazzanti", email = "matthew.mazzanti@gmail.com" }
]
requires-python = ">=3.13"
license = "MIT"
readme = "README.md"
dependencies = []
keywords = ["shell", "subprocess", "async", "pipe", "command"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/matthewmazzanti/shish"
Repository = "https://github.com/matthewmazzanti/shish"
Issues = "https://github.com/matthewmazzanti/shish/issues"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "ANN"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
