[project]
name = "shish"
version = "0.0.0.dev0"
description = "Async shell command library with operator-based DSL"
authors = [
    { name = "Matthew Mazzanti", email = "matthew.mazzanti@gmail.com" }
]
requires-python = ">=3.13"
license = "MIT"
readme = "README.md"
dependencies = []
keywords = ["shell", "subprocess", "async", "pipe", "command"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/matthewmazzanti/shish"
Repository = "https://github.com/matthewmazzanti/shish"
Issues = "https://github.com/matthewmazzanti/shish/issues"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.setuptools.ext-modules]]
name = "shish._cbufwriter"
sources = ["src/shish/_cbufwriter.c"]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
    "tabulate>=0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "ANN", "PLC0415", "ICN"]
ignore = ["E501"]  # line length enforced by formatter; overload tables use fmt: off

[tool.ruff.lint.flake8-import-conventions.aliases]
typing = "ty"
dataclasses = "dc"

[tool.ruff.lint.flake8-import-conventions]
banned-from = ["typing", "dataclasses"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
